Last 5 exercises with tests

--- a/Homework1/Makefile
+++ b/Homework1/Makefile
@@ -1,9 +1,12 @@
-TESTS="h1_tests"
+TEST_FILE="h1_tests"
 
-CMD=$(subst filename,${TESTS},"eunit:test(filename, [verbose])")
+CMD=$(subst filename,${TEST_FILE},"eunit:test(filename, [verbose])")
 
 all:
 	erl -make
 
 test: all
 	erl -noshell -pa ebin -eval ${CMD} -s init stop
+
+clean:
+	rm -rf ebin/*
